--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,16 +1,18 @@
-name: Build and Release macOS App
+name: Build macOS App
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main ] # Trigger on pushes to main
     tags:
-      - 'v*.*.*' # Trigger on version tags like v1.0.0
-  workflow_dispatch: # Allows manual triggering
+      - 'v*' # Trigger on version tags like v1.0, v2.1.3
+  pull_request:
+    branches: [ main ] # Optional: Trigger on PRs to main
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
   build:
-    name: Build macOS Application
-    runs-on: macos-latest # Use a macOS runner
+    name: Build macOS App Bundle
+    runs-on: macos-latest # Use the latest macOS runner
 
     steps:
       - name: Checkout code
@@ -21,31 +23,19 @@ jobs:
         with:
           python-version: '3.x' # Use a recent Python 3 version
 
-      - name: Install fswatch (system dependency)
-        run: brew install fswatch
-
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          # Ensure py2app is installed if not in requirements.txt
+          pip install py2app
 
-      - name: Prepare .env file
-        run: cp dist/.env.template .env # Copy template to .env
+      - name: Run build script
+        run: python build_app.py # Execute your build script
 
-      - name: Build the application
-        run: python build_app.py # Assuming this script creates the .app bundle
-
-      - name: Upload artifact
+      - name: Upload macOS App Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: TurboSync-macOS-App
-          path: dist/TurboSync.app # Assuming the app is built into the dist directory
-          if-no-files-found: error # Fail if the app bundle isn't found
-
-      - name: Create Release and Upload Asset
-        if: startsWith(github.ref, 'refs/tags/') # Only run for tag pushes
-        uses: softprops/action-gh-release@v1
-        with:
-          files: dist/TurboSync.app # Path to the asset to upload
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: TurboSync-macOS-App # Name of the artifact zip file
+          path: dist/TurboSync.app # Path to the built .app bundle
+          if-no-files-found: error # Fail if the .app isn't found
