--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -9,6 +9,9 @@ on:
     branches: [ main ] # Optional: Trigger on PRs to main
   workflow_dispatch: # Allow manual triggering
 
+permissions: # Added: Grant permission to create releases
+  contents: write
+
 jobs:
   build:
     name: Build macOS App Bundle
@@ -33,7 +36,54 @@ jobs:
       - name: Run build script
         run: python build_app.py --non-interactive --install-fswatch # Execute build script non-interactively
 
+      # --- Release Steps (only run on tag push) ---
+      - name: Determine Asset Name and Path (for Release)
+        if: startsWith(github.ref, 'refs/tags/') # Only run for tags
+        id: vars
+        run: |
+          APP_NAME="TurboSync" # Or derive from setup.py if needed
+          APP_PATH="dist/${APP_NAME}.app"
+          TAG_NAME="${{ github.ref_name }}" # e.g., v0.1.0
+          ZIP_NAME="${APP_NAME}-${TAG_NAME}.zip"
+          echo "APP_PATH=${APP_PATH}" >> $GITHUB_OUTPUT
+          echo "ZIP_NAME=${ZIP_NAME}" >> $GITHUB_OUTPUT
+          echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_OUTPUT
+
+      - name: Check if App exists (for Release)
+        if: startsWith(github.ref, 'refs/tags/') # Only run for tags
+        run: |
+          echo "Checking for application at ${{ steps.vars.outputs.APP_PATH }}"
+          ls -l dist/
+          if [ ! -d "${{ steps.vars.outputs.APP_PATH }}" ]; then
+            echo "Error: Application bundle not found at ${{ steps.vars.outputs.APP_PATH }}"
+            exit 1
+          fi
+
+      - name: Zip the application bundle (for Release)
+        if: startsWith(github.ref, 'refs/tags/') # Only run for tags
+        run: |
+          echo "Zipping ${{ steps.vars.outputs.APP_PATH }} into ${{ steps.vars.outputs.ZIP_NAME }}"
+          # Ensure we are in the correct directory to zip relative paths correctly
+          cd dist
+          zip -r "../${{ steps.vars.outputs.ZIP_NAME }}" "${{ steps.vars.outputs.APP_NAME }}.app"
+          cd ..
+          echo "Zip created: ${{ steps.vars.outputs.ZIP_NAME }}"
+          ls -l ${{ steps.vars.outputs.ZIP_NAME }}
+
+      - name: Create Release and Upload Release Asset
+        if: startsWith(github.ref, 'refs/tags/') # Only run for tags
+        uses: softprops/action-gh-release@v2
+        with:
+          files: ${{ steps.vars.outputs.ZIP_NAME }}
+          tag_name: ${{ steps.vars.outputs.TAG_NAME }}
+          name: Release ${{ steps.vars.outputs.TAG_NAME }}
+          body: Automated release for ${{ steps.vars.outputs.TAG_NAME }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # --- Artifact Upload (only run on non-tag pushes/PRs) ---
       - name: Upload macOS App Artifact
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }} # Corrected: Only run for non-tags
         uses: actions/upload-artifact@v4
         with:
           name: TurboSync-macOS-App # Name of the artifact zip file
