--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -166,8 +166,12 @@ jobs:
             echo "No changes to commit to Homebrew formula."
           else
             git commit -m "Update turbosync formula to version ${{ steps.vars.outputs.TAG_NAME }}"
-            # Push using the PAT for authentication to the main branch, exit on error
-            git push https://x-access-token:${{ secrets.HOMEBREW_TAP_TOKEN }}@github.com/Johnr24/homebrew-turbosync.git HEAD:main || exit 1
+            # Configure Git to use the PAT in the Authorization header for this push
+            git config --global http.https://github.com/.extraheader "AUTHORIZATION: Bearer ${{ secrets.HOMEBREW_TAP_TOKEN }}"
+            # Push using the standard HTTPS URL, exit on error
+            git push https://github.com/Johnr24/homebrew-turbosync.git HEAD:main || exit 1
+            # Unset the extraheader to avoid interfering with subsequent git operations (though unlikely here)
+            git config --global --unset http.https://github.com/.extraheader
             echo "Pushed updated formula to Johnr24/homebrew-turbosync"
           fi
           cd .. # Change back to the original directory
